--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "express-session": "^1.17.3",
     "passport": "^0.6.0",
     "passport-spotify": "^2.0.0",
-    "spotify-web-api-node": "^5.0.2"
+    "spotify-web-api-node": "^5.0.2",
+    "uuid": "^9.0.1"
   },
   "name": "spotiweb",
   "version": "1.0.0",
